--- a/Bind/Src/ModuloRiesgos.fx.yaml
+++ b/Bind/Src/ModuloRiesgos.fx.yaml
@@ -2009,7 +2009,7 @@ ModuloRiesgos As screen:
                             )
                         }
                     )
-                DisplayFields: =["DisplayName","Email","Picture"]
+                DisplayFields: =["Claims"]
                 Height: =Txt_FondoResponsable.Height - 10
                 HoverBorderColor: =RGBA(0, 121, 187, 1)
                 InputTextPlaceholder: ="Buscar responsable"
@@ -2017,7 +2017,7 @@ ModuloRiesgos As screen:
                 OnSelect: =
                 PressedFill: =RGBA(0, 121, 187, 1)
                 Reset: =ResetearControlPry
-                SearchFields: =["DisplayName"]
+                SearchFields: =["Claims"]
                 SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,Cmb_Ris_Responsable.SearchText)
                 SelectMultiple: =false
                 Template: =ListItemTemplate.Person
