--- a/Bind/Src/EdicionFcst.fx.yaml
+++ b/Bind/Src/EdicionFcst.fx.yaml
@@ -3087,7 +3087,7 @@ EdicionFcst As screen:
                             )
                         )
                     DisabledColor: =RGBA(53, 61, 63, 1)
-                    DisplayFields: =["DisplayName","Email","Picture"]
+                    DisplayFields: =["Claims"]
                     DisplayMode: =DisplayMode.Disabled
                     Height: =Txt_FondoPOJP_10.Height -10
                     HoverBorderColor: =RGBA(0, 121, 187, 1)
@@ -3096,7 +3096,7 @@ EdicionFcst As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
-                    SearchFields: =["DisplayName"]
+                    SearchFields: =["Claims"]
                     SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,DataCardValue13_2.SearchText)
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
@@ -3576,7 +3576,7 @@ EdicionFcst As screen:
                                 )
                             )
                         )
-                    DisplayFields: =["DisplayName","Email","Picture"]
+                    DisplayFields: =["Claims"]
                     DisplayMode: |-
                         =If(
                             Chk_AplicaPO.Checked,
@@ -3590,7 +3590,7 @@ EdicionFcst As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
-                    SearchFields: =["DisplayName"]
+                    SearchFields: =["Claims"]
                     SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,DataCardValue45_2.SearchText)
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
