--- a/Bind/Src/ModuloData.fx.yaml
+++ b/Bind/Src/ModuloData.fx.yaml
@@ -382,7 +382,7 @@ ModuloData As screen:
             SearchItems: |-
                 =Search(Sort(Filter(Col_BD_Dominios,IDDominio="Via-F5536E52-70B9-88B7-A57E-458F2FD63267"||IDDominio="Via-04AC3A31-5248-667D-97F8-35D2A0D306B3"||
                 IDDominio="Via-961CECE9-3D2F-41E2-0F6C-2D35A99F49C5"||
-                IDDominio="Via-DC044ED3-50C7-899B-1FF8-9A066CF495B5"),Title,SortOrder.Ascending),Dpd_Dominio_1.SearchText,"Title")
+                IDDominio="Via-DC044ED3-50C7-899B-1FF8-9A066CF495B5"),Title,SortOrder.Ascending),Dpd_Dominio_1.SearchText,"ComplianceAssetId")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
@@ -964,13 +964,13 @@ ModuloData As screen:
                         }
                     )
                 DisabledColor: =RGBA(102, 102, 102, 1)
-                DisplayFields: =["DisplayName","Email","Picture"]
+                DisplayFields: =["Claims"]
                 DisplayMode: =If(ThisItem.DATA_Origen="BIND",DisplayMode.Edit, DisplayMode.Disabled)
                 HoverBorderColor: =RGBA(0, 121, 187, 1)
                 Items: =Choices([@Lst_Persona].BuscarNombrePersona)
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 PressedFill: =RGBA(0, 121, 187, 1)
-                SearchFields: =["DisplayName"]
+                SearchFields: =["Claims"]
                 SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,Cmb_JefeProyecto_1.SearchText)
                 SelectionFill: =RGBA(0, 121, 187, 1)
                 SelectMultiple: =false
@@ -1029,13 +1029,13 @@ ModuloData As screen:
                 DefaultSelectedItems: |-
                     =Table({DisplayName:LookUp(Lst_Persona, Usuario =  Dpd_SubDominio_1.Selected.Responsable,Nombre_Persona)})
                 DisabledColor: =RGBA(128, 128, 128, 1)
-                DisplayFields: =["DisplayName","Email","Picture"]
+                DisplayFields: =["Claims"]
                 DisplayMode: =Parent.DisplayMode.Disabled
                 HoverBorderColor: =RGBA(0, 121, 187, 1)
                 Items: =Choices([@Lst_Persona].BuscarNombrePersona)
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 PressedFill: =RGBA(0, 121, 187, 1)
-                SearchFields: =["DisplayName"]
+                SearchFields: =["Claims"]
                 SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,Cmb_Responsable_Tech_1.SearchText)
                 SelectionFill: =RGBA(0, 121, 187, 1)
                 SelectMultiple: =false
@@ -1812,7 +1812,7 @@ ModuloData As screen:
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: |-
                 =//Table({DisplayName:_Perfil.displayName})
-            DisplayFields: =["DisplayName","Email","Picture"]
+            DisplayFields: =["Claims"]
             Height: =Txt_FondoForm1_68.Height -10
             HoverBorderColor: =RGBA(0, 121, 187, 1)
             Items: =Choices([@Lst_Persona].BuscarNombrePersona)
@@ -1826,7 +1826,7 @@ ModuloData As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["DisplayName"]
+            SearchFields: =["Claims"]
             SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,Cmb_FiltroJefePO_1.SearchText)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
