--- a/Bind/Src/ModuloEquipoV1.fx.yaml
+++ b/Bind/Src/ModuloEquipoV1.fx.yaml
@@ -430,7 +430,7 @@ ModuloEquipoV1 As screen:
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: |-
                 =//Table({DisplayName:_Perfil.displayName})
-            DisplayFields: =["DisplayName","Email","Picture"]
+            DisplayFields: =["Claims"]
             DisplayMode: |-
                 =If(
                     _VarVerPopUpPortafolio,
@@ -450,7 +450,7 @@ ModuloEquipoV1 As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["DisplayName"]
+            SearchFields: =["Claims"]
             SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,Cmb_FiltroJefePO_7.SearchText)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
