--- a/Bind/Src/RepositorioProveedor.fx.yaml
+++ b/Bind/Src/RepositorioProveedor.fx.yaml
@@ -178,7 +178,7 @@ RepositorioProveedor As screen:
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["Value"]
-            SearchItems: =[]
+            SearchItems: =Choices(Lst_ContratosProveedores.Formulario_Solicitud,Cmb_FiltroNombre_9.SearchText)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
@@ -2023,11 +2023,11 @@ RepositorioProveedor As screen:
                     DisabledBorderColor: =RGBA(0, 0, 0, 0)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisabledFill: =RGBA(0, 0, 0, 0)
-                    DisplayFields: =["Nombre_Persona"]
+                    DisplayFields: =["Categoria"]
                     DisplayMode: =Parent.DisplayMode
                     Items: =Col_BD_Persona
-                    SearchFields: =["Nombre_Persona"]
-                    SearchItems: =Search(Col_BD_Persona,ComboBox2_5.SearchText,"Nombre_Persona")
+                    SearchFields: =["Categoria"]
+                    SearchItems: =Search(Col_BD_Persona,ComboBox2_5.SearchText,"Categoria")
                     SelectMultiple: =false
                     Width: =282
                     X: =28
@@ -2108,11 +2108,11 @@ RepositorioProveedor As screen:
                     DisabledBorderColor: =RGBA(0, 0, 0, 0)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisabledFill: =RGBA(0, 0, 0, 0)
-                    DisplayFields: =["Nombre_Persona"]
+                    DisplayFields: =["Categoria"]
                     DisplayMode: =Parent.DisplayMode
                     Items: =Col_BD_Persona
-                    SearchFields: =["Nombre_Persona"]
-                    SearchItems: =Search(Col_BD_Persona,ComboBox2_7.SearchText,"Nombre_Persona")
+                    SearchFields: =["Categoria"]
+                    SearchItems: =Search(Col_BD_Persona,ComboBox2_7.SearchText,"Categoria")
                     SelectMultiple: =false
                     Width: =282
                     X: =30
