--- a/Bind/Src/ServiciosTech.fx.yaml
+++ b/Bind/Src/ServiciosTech.fx.yaml
@@ -660,7 +660,7 @@ ServiciosTech As screen:
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: |-
                 =//Table({DisplayName:_Perfil.displayName})
-            DisplayFields: =["DisplayName","Email","Picture"]
+            DisplayFields: =["Claims"]
             DisplayMode: |-
                 =
                     DisplayMode.Edit
@@ -676,7 +676,7 @@ ServiciosTech As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["DisplayName"]
+            SearchFields: =["Claims"]
             SearchItems: =Choices(Lst_Persona.BuscarNombrePersona,Cmb_FiltroJefePO_2.SearchText)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
@@ -742,7 +742,7 @@ ServiciosTech As screen:
             ChevronFill: =RGBA(0, 121, 187, 1)
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: =
-            DisplayFields: =["Title"]
+            DisplayFields: =["ComplianceAssetId"]
             DisplayMode: |-
                 =
                     DisplayMode.Edit
@@ -765,8 +765,13 @@ ServiciosTech As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["Title"]
-            SearchItems: =[]
+            SearchFields: =["ComplianceAssetId"]
+            SearchItems: |-
+                =Search(Filter(Col_BD_Dominios,
+                IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCF230A" || 
+                IDDominio="Via-EFF1A142-75C7-8AD8-4CCA-C645097B0BA4" ||
+                IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCFP7K8"
+                )//||IDDominio="Via-FDB30966-A6C1-2FAC-8856-34429C2AA582",Cmb_FiltroNombre_6.SearchText,"ComplianceAssetId")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
